test: resources + services