@@ -2,15 +2,15 @@ package com.tribly.service.team;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import com.tribly.domain.common.repository.TriblyPage;
 import com.tribly.domain.team.Team;
 import com.tribly.domain.user.User;
+import com.tribly.dto.teams.request.CreateTeamRequest;
+import com.tribly.dto.teams.request.UpdateTeamRequest;
+import com.tribly.dto.teams.response.TeamDetailDto;
+import com.tribly.dto.teams.response.TeamListResponse;
 import com.tribly.enums.TeamRole;
 import com.tribly.enums.Visibility;
 import com.tribly.infrastructure.exception.BusinessException;
-import com.tribly.service.team.request.CreateTeamRequest;
-import com.tribly.service.team.request.UpdateTeamRequest;
-import com.tribly.service.team.response.TeamAndRole;
 import com.tribly.util.TestDataCleaner;
 import com.tribly.util.TestDataService;
 import io.quarkus.test.junit.QuarkusTest;
@@ -43,14 +43,14 @@ class TeamServiceTest {
     CreateTeamRequest request =
         new CreateTeamRequest("Test Team", "A test team", Visibility.PUBLIC, null);
 
-    TeamAndRole result = teamService.createTeam(request, user1.getId());
+    TeamDetailDto result = teamService.createTeam(request, user1.getId());
 
     assertNotNull(result);
-    assertEquals("Test Team", result.team().getName());
-    assertEquals("test-team", result.team().getSlug());
-    assertEquals("A test team", result.team().getDescription());
-    assertEquals(Visibility.PUBLIC, result.team().getVisibility());
-    assertEquals(TeamRole.ADMIN, result.teamRole());
+    assertEquals("Test Team", result.name());
+    assertEquals("test-team", result.slug());
+    assertEquals("A test team", result.description());
+    assertEquals(Visibility.PUBLIC, result.visibility());
+    assertEquals(TeamRole.ADMIN, result.role());
     assertEquals(1L, result.memberCount());
   }
 
@@ -58,9 +58,9 @@ class TeamServiceTest {
   void createTeam_shouldCreateAdminMembership() {
     CreateTeamRequest request = new CreateTeamRequest("My Team", null, Visibility.PUBLIC, null);
 
-    TeamAndRole result = teamService.createTeam(request, user1.getId());
+    TeamDetailDto result = teamService.createTeam(request, user1.getId());
 
-    Optional<TeamRole> role = teamService.getUserRole(user1.getId(), result.team().getSlug());
+    Optional<TeamRole> role = teamService.getUserRole(user1.getId(), result.slug());
     assertTrue(role.isPresent());
     assertEquals(TeamRole.ADMIN, role.get());
   }
@@ -70,21 +70,21 @@ class TeamServiceTest {
     CreateTeamRequest request1 = new CreateTeamRequest("Test Team", null, Visibility.PUBLIC, null);
     CreateTeamRequest request2 = new CreateTeamRequest("Test Team", null, Visibility.PUBLIC, null);
 
-    TeamAndRole team1 = teamService.createTeam(request1, user1.getId());
-    TeamAndRole team2 = teamService.createTeam(request2, user2.getId());
+    TeamDetailDto team1 = teamService.createTeam(request1, user1.getId());
+    TeamDetailDto team2 = teamService.createTeam(request2, user2.getId());
 
-    assertEquals("test-team", team1.team().getSlug());
-    assertNotEquals("test-team", team2.team().getSlug());
-    assertTrue(team2.team().getSlug().startsWith("test-team-"));
+    assertEquals("test-team", team1.slug());
+    assertNotEquals("test-team", team2.slug());
+    assertTrue(team2.slug().startsWith("test-team-"));
   }
 
   @Test
   void createTeam_shouldSetMaxMembers() {
     CreateTeamRequest request = new CreateTeamRequest("Limited Team", null, Visibility.PUBLIC, 10);
 
-    TeamAndRole result = teamService.createTeam(request, user1.getId());
+    TeamDetailDto result = teamService.createTeam(request, user1.getId());
 
-    assertEquals(10, result.team().getMaxMembers());
+    assertEquals(10, result.maxMembers());
   }
 
   @Test
@@ -105,9 +105,9 @@ class TeamServiceTest {
     dataService.createTeamWithVisibility("Public Team 2", "public-2", Visibility.PUBLIC);
     dataService.createTeamWithVisibility("Private Team", "private", Visibility.TEAM);
 
-    TriblyPage<TeamAndRole> result = teamService.listTeams(null, null, null, 0, 10);
+    TeamListResponse result = teamService.listTeams(null, null, null, 0, 10);
 
-    assertEquals(2, result.items().size());
+    assertEquals(2, result.teams().size());
   }
 
   @Test
@@ -116,10 +116,10 @@ class TeamServiceTest {
     dataService.createTeamWithVisibility("Team 2", "team-2", Visibility.PUBLIC);
     dataService.addUserToTeam(user1, team1, TeamRole.MEMBER);
 
-    TriblyPage<TeamAndRole> result = teamService.listTeams(user1.getId(), true, null, 0, 10);
+    TeamListResponse result = teamService.listTeams(user1.getId(), true, null, 0, 10);
 
-    assertEquals(1, result.items().size());
-    assertEquals("team-1", result.items().get(0).team().getSlug());
+    assertEquals(1, result.teams().size());
+    assertEquals("team-1", result.teams().getFirst().slug());
   }
 
   @Test
@@ -128,10 +128,10 @@ class TeamServiceTest {
     dataService.createTeamWithVisibility("Team 2", "team-2", Visibility.PUBLIC);
     dataService.addUserToTeam(user1, team1, TeamRole.MEMBER);
 
-    TriblyPage<TeamAndRole> result = teamService.listTeams(user1.getId(), false, null, 0, 10);
+    TeamListResponse result = teamService.listTeams(user1.getId(), false, null, 0, 10);
 
-    assertEquals(1, result.items().size());
-    assertEquals("team-2", result.items().get(0).team().getSlug());
+    assertEquals(1, result.teams().size());
+    assertEquals("team-2", result.teams().getFirst().slug());
   }
 
   @Test
@@ -140,9 +140,9 @@ class TeamServiceTest {
       dataService.createTeamWithVisibility("Team " + i, "team-" + i, Visibility.PUBLIC);
     }
 
-    TriblyPage<TeamAndRole> result = teamService.listTeams(null, null, null, 0, 2);
+    TeamListResponse result = teamService.listTeams(null, null, null, 0, 2);
 
-    assertEquals(2, result.items().size());
+    assertEquals(2, result.teams().size());
     assertEquals(5, result.total());
   }
 
@@ -152,10 +152,10 @@ class TeamServiceTest {
   void getTeam_shouldReturnTeam() {
     dataService.createTeamWithVisibility("Test Team", "test-team", Visibility.PUBLIC);
 
-    TeamAndRole result = teamService.getTeam("test-team", null);
+    TeamDetailDto result = teamService.getTeam("test-team", null);
 
-    assertEquals("Test Team", result.team().getName());
-    assertEquals("test-team", result.team().getSlug());
+    assertEquals("Test Team", result.name());
+    assertEquals("test-team", result.slug());
   }
 
   @Test
@@ -181,14 +181,14 @@ class TeamServiceTest {
             "https://example.com/cover.png",
             50);
 
-    TeamAndRole result = teamService.updateTeam("original", request, user1.getId());
+    TeamDetailDto result = teamService.updateTeam("original", request, user1.getId());
 
-    assertEquals("Updated Name", result.team().getName());
-    assertEquals("Updated description", result.team().getDescription());
-    assertEquals(Visibility.TEAM, result.team().getVisibility());
-    assertEquals("https://example.com/logo.png", result.team().getLogoUrl());
-    assertEquals("https://example.com/cover.png", result.team().getCoverImageUrl());
-    assertEquals(50, result.team().getMaxMembers());
+    assertEquals("Updated Name", result.name());
+    assertEquals("Updated description", result.description());
+    assertEquals(Visibility.TEAM, result.visibility());
+    assertEquals("https://example.com/logo.png", result.logoUrl());
+    assertEquals("https://example.com/cover.png", result.coverImageUrl());
+    assertEquals(50, result.maxMembers());
   }
 
   @Test
@@ -197,10 +197,24 @@ class TeamServiceTest {
     dataService.addUserToTeam(user1, team, TeamRole.ADMIN);
     UpdateTeamRequest request = new UpdateTeamRequest("New Name", null, null, null, null, null);
 
-    TeamAndRole result = teamService.updateTeam("original", request, user1.getId());
+    TeamDetailDto result = teamService.updateTeam("original", request, user1.getId());
 
-    assertEquals("New Name", result.team().getName());
-    assertEquals(Visibility.PUBLIC, result.team().getVisibility());
+    assertEquals("New Name", result.name());
+    assertEquals(Visibility.PUBLIC, result.visibility());
+  }
+
+  @Test
+  void updateTeam_shouldPreserveNameWhenNull() {
+    Team team =
+        dataService.createTeamWithVisibility("Original Name", "original", Visibility.PUBLIC);
+    dataService.addUserToTeam(user1, team, TeamRole.ADMIN);
+    UpdateTeamRequest request =
+        new UpdateTeamRequest(null, "Updated description", null, null, null, null);
+
+    TeamDetailDto result = teamService.updateTeam("original", request, user1.getId());
+
+    assertEquals("Original Name", result.name());
+    assertEquals("Updated description", result.description());
   }
 
   @Test
